add wildcard for allowed urls
